<resources>
    <string name="app_name">To Do</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu">Menu</string>
    <string name="toolbar_title">Task List</string>
    <string name="create_task">Create Task</string>
    <string name="add_new_task">Add New Task</string>
    <string name="date">Date</string>
    <string name="type_the_note_here">Type the note here...</string>
    <string name="task_name">Task Name</string>
    <string name="no_data_found">No Tasks Found!</string>
    <string name="add_task">Add Task</string>
</resources>