<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/parent_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".calender.bottom_sheet.CalendarBottomSheetFragment">

        <TextView
            android:id="@+id/headerTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/add_new_task"
            android:textSize="20sp"
            android:layout_marginTop="24dp"
            android:layout_marginHorizontal="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/taskNameET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:background="@drawable/rounded_background"
            android:hint="@string/task_name"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="24dp"
            android:paddingVertical="8dp"
            android:paddingHorizontal="16dp"
            android:textColor="#808080"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/headerTitle"/>

        <EditText
            android:id="@+id/taskTypeET"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/rounded_background"
            android:gravity="start"
            android:hint="@string/type_the_note_here"
            android:paddingHorizontal="16dp"
            android:paddingVertical="12dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:textColor="#808080"
            app:layout_constraintTop_toBottomOf="@+id/taskNameET"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <LinearLayout
            android:id="@+id/taskDateLL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_background"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/taskTypeET"
            app:layout_constraintStart_toStartOf="@+id/taskTypeET"
            app:layout_constraintEnd_toEndOf="@+id/taskTypeET">

            <TextView
                android:id="@+id/taskDateTV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:hint="@string/date"
                android:paddingVertical="10dp"
                android:paddingHorizontal="16dp"
                android:textColor="#808080"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:drawableEndCompat="@drawable/ic_calender_date" />

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/createTaskBTN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            app:backgroundTint="@color/blue"
            android:background="@drawable/rounded_background"
            android:text="@string/create_task"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:paddingVertical="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/taskDateLL" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>